title.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500;700;800;900&display=swap');

:root {
    overflow-y: hidden;
    overflow-x: hidden;
    overscroll-behavior-y: none;
    overscroll-behavior-x: none;
    --fgcolor: #000000;
    --fgcolorpass: #00000020;
    --fgcolormid: #777777;
    --bgcolor: #dddddd;
}

body {
    font-family: 'Inter', sans-serif !important;
    background-color: var(--bgcolor) !important;
    transition: background-color 2s cubic-bezier(0.1, 0.9, 0.2, 1);
}

[contenteditable="true"]:empty:not(:focus):before {
    content: attr(placeholder);
    opacity: 50%;
}

#iListName {
    display: inline-block;
    width: auto !important;
    height: 48px;
}

#cListInfo {
    display: flex;
    margin-bottom: 8px;
    gap: 8px;
}

ul li button {
    color: black;
    padding: 6px !important;
}

#iNoteColor,
#iListColor {
    border-radius: 50%;
    border: none;
    outline: none;
    padding: 0px;
    height: 24px;
    width: 24px;
    -webkit-appearance: none;
}

#iNoteColor::-webkit-color-swatch-wrapper,
#iListColor::-webkit-color-swatch-wrapper {
    padding: 0;
    -webkit-appearance: none;
}

#iNoteColor::-webkit-color-swatch,
#iListColor::-webkit-color-swatch {
    border: none;
    border-radius: 50%;
    -webkit-appearance: none;
}

#tDeleteNote {
    align-self: flex-end;
}

#page {
    margin: 16px;
    margin-top: 0px;
    height: -webkit-fill-available;
    overflow-y: auto;
}

hr {
    margin: 8px !important;
}

#tools {
    display: flex;
    align-content: flex-end;
    gap: 8px;
    padding: 8px;
    padding-left: 0px;
}

#toolbar {
    position: relative;
    display: flex;
    z-index: 1;
    width: -webkit-fill-available;
}

.notelist-item {
    display: flex;
    align-items: center;
    justify-content: flex-start;
    font-size: 20px;
    height: 36px;
}

.shelf-option {
    align-self: center;
    height: inherit;
}

.shelf-name {
    flex-grow: 1;
    text-align: start;
    font-size: 1.5rem;
}

#header {
    display: flex;
    gap: 8px;
    width: 100%;
    padding: 16px;
    align-items: center;
    justify-content: space-between;
    z-index: 1;
}

#tShelfListOuter,
#iNoteName,
#iNoteContent,
.notecard {
    color: var(--fgcolor) !important;
    border-color: var(--fgcolor) !important;
    background-color: var(--fgcolorpass) !important;
    transition: background-color 2s cubic-bezier(0.1, 0.9, 0.2, 1), color 2s cubic-bezier(0.1, 0.9, 0.2, 1), border-color 2s cubic-bezier(0.1, 0.9, 0.2, 1);

}

#iNoteName::placeholder,
#iNoteContent::placeholder {
    color: var(--fgcolormid) !important;
}

#shelfmenu {
    color: var(--fgcolor) !important;
    border-color: var(--fgcolor) !important;
    background-color: var(--bgcolor) !important;
    transition: background-color 2s cubic-bezier(0.1, 0.9, 0.2, 1), color 2s cubic-bezier(0.1, 0.9, 0.2, 1), border-color 2s cubic-bezier(0.1, 0.9, 0.2, 1);
    border-width: 3px;
    border-radius: 12px;
}

.tNoteStatus {
    color: var(--fgcolor) !important;
    border-color: var(--fgcolor) !important;
    transition: background-color 2s cubic-bezier(0.1, 0.9, 0.2, 1), color 2s cubic-bezier(0.1, 0.9, 0.2, 1), border-color 2s cubic-bezier(0.1, 0.9, 0.2, 1);
}


#logo.toolbutton i {
    font-size: 30px !important;
    color: var(--fgcolor);
}

#logo.toolbutton {
    padding-inline: 8px;
    margin-right: auto;
}

#shelflist:disabled {
    color: #999999;
}

#iNoteName {
    font-size: 40px;
    max-height: 60px;
    overflow: hidden;
    width: -webkit-fill-available;
    font-weight: 700;
    outline: none !important;
    box-shadow: none !important;
    border: 3px solid var(--fgcolor);
    border-radius: 12px;
    margin-inline: 15%;
    resize: none;
}

#iNoteContent {
    width: -webkit-fill-available;
    height: 90%;
    margin-top: 8px;
    outline: none !important;
    box-shadow: none !important;
    border: 3px solid var(--fgcolor);
    border-radius: 12px;
    margin-inline: 15%;
    resize: none;
}

#vNoteList p {
    font-size: 24px;
}

#vEditor {
    height: -webkit-fill-available;
}

input {
    margin-bottom: 5px;
}

dialog {
    border: solid 3px var(--fgcolor);
    background-color: var(--bgcolor);
    transition: background-color 2s cubic-bezier(0.1, 0.9, 0.2, 1), color 2s cubic-bezier(0.1, 0.9, 0.2, 1), border-color 2s cubic-bezier(0.1, 0.9, 0.2, 1);
    border-radius: 12px;
}

dialog h2 {
    color: var(--fgcolor);
    font-weight: 700;
}

dialog p,
#cEmptyListHeader {
    color: var(--fgcolor);
}

#cEmptyListHeader {
    margin-top: 8px;
    margin-inline: 15%;
}

dialog input.form-control {
    outline: none !important;
    box-shadow: none !important;
    border: 3px solid var(--fgcolor) !important;
    background-color: var(--fgcolorpass) !important;
    color: var(--fgcolor) !important;
    border-radius: 12px !important;
}

.toolbutton {
    font-size: 24px;
    height: 48px;
    border-color: var(--fgcolor) !important;
    color: var(--fgcolor) !important;
    transition: background-color 2s cubic-bezier(0.1, 0.9, 0.2, 1), color 2s cubic-bezier(0.1, 0.9, 0.2, 1), border-color 2s cubic-bezier(0.1, 0.9, 0.2, 1);
}

.toolbutton i {
    font-size: 24px;
    color: var(--fgcolor);
    border-color: var(--fgcolor) !important;
    transition: background-color 2s cubic-bezier(0.1, 0.9, 0.2, 1), color 2s cubic-bezier(0.1, 0.9, 0.2, 1), border-color 2s cubic-bezier(0.1, 0.9, 0.2, 1);
}

.toolbutton:hover {
    background-color: var(--fgcolorpass) !important;
}

.notecard {
    border-width: 3px !important;
    border-radius: 12px !important;
    max-height: 250px;
    width: auto;
    margin-inline: 15%;
    margin-bottom: 8px;
    cursor: pointer;
    user-select: none;
    --bs-card-border-color: black !important;
}

.card-text {
    display: -webkit-box;
    -webkit-line-clamp: 4;
    -webkit-box-orient: vertical;
    overflow: hidden !important;
    text-overflow: ellipsis;
    width: auto;
    margin-right: 16px;
}

#tPageTitle,
#tFoldersTitle {
    width: -webkit-fill-available;
    font-weight: 700;
    font-size: 40px;
    color: var(--fgcolor);
    margin-inline: 15%;
}

#tBack {
    font-size: 18px;
}

#tBack i {
    font-size: 18px;
}

body[activeview="edit"] #tNewShelf,
body[activeview="edit"] #tNewNote {
    display: none;
}

body[activeview="edit"] #tDeleteNote,
body[activeview="edit"] #tCloseNote {
    display: block;
}

body[activeview="list"] #tNewNote {
    display: block;
}

body[activeview="list"] #tCloseNote,
body[activeview="list"] #tDeleteNote,
body[activeview="list"] #tNewShelf {
    display: none;
}

body[activeview="all"] #tCloseNote,
body[activeview="all"] #tDeleteNote,
body[activeview="all"] #tNewNote {
    display: none;
}

#vFolderList,
#vFolderTools {
    border: 3px solid var(--fgcolor);
    background-color: var(--fgcolorpass);
    border-radius: 12px;
    padding: 8px !important;
    margin-inline: 15%;
}

#vFolderList li button,
#vFolderTools li button {
    background-color: transparent;
    border: none;
}

#vFolders,
#vNotes,
#vEditor {
    overflow-y: auto;
    position: fixed;
    height: inherit;
    width: 100%;
    transition: left .5s cubic-bezier(0.1, 0.9, 0.2, 1), opacity cubic-bezier(0.1, 0.9, 0.2, 1);
}

body[activeview="all"] #vFolders {
    left: 0%;
    opacity: 100%;
}

body[activeview="all"] #vNotes {
    left: 100%;
    opacity: 0%;
}

body[activeview="all"] #vEditor {
    left: 200%;
    opacity: 0%;
}

body[activeview="list"] #vFolders {
    left: -100%;
    opacity: 0%;
}

body[activeview="list"] #vNotes {
    left: 0%;
    opacity: 100%;
}

body[activeview="list"] #vEditor {
    left: 100%;
    opacity: 0%;
}

body[activeview="edit"] #vFolders {
    left: -200%;
    opacity: 0%;
}

body[activeview="edit"] #vNotes {
    left: -100%;
    opacity: 0%;
}

body[activeview="edit"] #vEditor {
    left: 0%;
    opacity: 100%;
}



.card-title {
    margin-bottom: 0px !important;
    font-size: 1.5rem !important;
    font-weight: 500;
    width: auto;
    min-width: 20%;
    margin-right: 16px;
    display: inline-flex;
    outline: none;
    cursor: text;
}

.tNoteStatus {
    -webkit-appearance: none;
    background-color: transparent;
    border: 3px solid;
    border-radius: 17px;
    height: 25px;
    min-width: 25px;
    margin-right: 8px;
    align-self: flex-start;

}

.btn,
#iListName {
    border-width: 3px !important;
    border-radius: 12px !important;
}

.tNoteStatus:checked:after {
    content: '\F26E';
    font-size: 20px;
    font-family: bootstrap-icons;
    position: relative;
    top: -4px;
    left: -.5px;
}

.card-heading {
    display: flex;
    align-items: center;
}

body[activeview="all"] #tBack {
    padding-inline: 8px;
}

body[activeview="all"] #tBack i {
    font-size: 26px;
}





@media screen and (max-width: 600px) {

    #vFolderList,
    #cEmptyListHeader,
    #tPageTitle,
    #tFoldersTitle,
    #iNoteContent,
    #iNoteName,
    #vFolderTools,
    #vNoteList {
        margin-inline: 16px;
    }

    #toolbar {
        flex-wrap: wrap;
        position: relative;
        top: auto;
        left: auto;
    }

    #tools {
        width: -webkit-fill-available;
        display: flex;
        justify-content: space-evenly;
        position: fixed;
        padding: 8px;
        bottom: 20px;
        left: 0px;
        z-index: 1;
    }

    #tRenameShelf,
    #tDeleteShelf {
        font-size: 20px;
    }

    p,
    #iNoteContent,
    #shelflist,
    dialog input,
    dialog button {
        font-size: 20px;
    }

    #tShelfListOuter,
    #tShelfList {
        width: -webkit-fill-available;
        max-width: 100% !important;
    }

    #vNoteList a {
        font-size: 22px;
    }

    .notecard {
        width: 100%;
        margin-inline: 0px;
    }

}

